--- a/Resources/translations/messages.eu.yml
+++ b/Resources/translations/messages.eu.yml
@@ -4,6 +4,7 @@ form:
     label_description:  Deskribapena
     label_email:        Posta elektronikoa
     label_end_at:       Bukaera
+    label_images:       Irudiak
     label_name:         Izena
     label_price:        Prezioa
     label_start_at:     Hasiera
@@ -16,6 +17,7 @@ list:
     label_description:  Deskribapena
     label_email:        Posta elektronikoa
     label_end_at:       Bukaera
+    label_images:       Irudiak
     label_name:         Izena
     label_price:        Prezioa
     label_start_at:     Hasiera
