admin.label.description i18n

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -21,6 +21,7 @@ admin:
         or:           or
         clearFilter:  Clear
         galleryAdd:   Add new image
+        description:  Description
 
     admin:
         title: Admin area
