Administration area user management included in Core.

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -85,7 +85,12 @@ admin:
     new:
         title: New
 
-    # GARBITZEKO
+    # USER MODEL
+
+    user:
+        menu: Users
+
+    # TO CLEAN
 
     page:
         previous:       Previous page
