--- a/Resources/translations/messages.eu.yml
+++ b/Resources/translations/messages.eu.yml
@@ -85,7 +85,12 @@ admin:
     new:
         title: Sortu
 
-    # GARBITZEKO
+    # USER MODEL
+
+    user:
+        menu:  Erabiltzaileak
+
+    # TO CLEAN
 
     page:
         previous: Aurreko orrialdea
