--- a/Resources/translations/messages.eu.yml
+++ b/Resources/translations/messages.eu.yml
@@ -71,6 +71,7 @@ admin:
         code:        Kodea
         gallery:     Irudiak
         description: Deskribapena
+        noResults:   Ez dago emaitzarik
 
     list:
         title:       Zerrenda
