--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -7,6 +7,7 @@ admin:
         logout:       Logout
         back:         Back
         delete:       Delete
+        delete_confirm: Are you sure you want to delete this entry?
         edit:         Edit
         new:          New
         save:         Save
